--- a/ChemCalculator2/app/src/main/res/layout/activity_main.xml
+++ b/ChemCalculator2/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tabLayout"
-            android:background="@android:color/holo_blue_bright"
+            android:background="@android:color/holo_blue_dark"
+            app:tabIndicatorColor="@android:color/white"
             >
 
         </android.support.design.widget.TabLayout>
