--- a/ChemCalculator2/app/src/main/res/layout/fragment_molar_mass_calculator.xml
+++ b/ChemCalculator2/app/src/main/res/layout/fragment_molar_mass_calculator.xml
@@ -22,6 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:backgroundTint="@android:color/holo_blue_dark"
+        android:textCursorDrawable="@drawable/color_cursor"
         android:id="@+id/editText"
         android:layout_marginBottom="30dp"
         android:layout_above="@+id/button"
